--- a/DinnerApp.Application/DinnerApp.Application.csproj
+++ b/DinnerApp.Application/DinnerApp.Application.csproj
@@ -7,5 +7,8 @@
   <ItemGroup>
     <ProjectReference Include="..\DinnerApp.Domain\DinnerApp.Domain.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+  </ItemGroup>
 
 </Project>
