--- a/DinnerApp.Infrastructure/DinnerApp.Infrastructure.csproj
+++ b/DinnerApp.Infrastructure/DinnerApp.Infrastructure.csproj
@@ -1,6 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
-  
+    
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -9,6 +8,8 @@
   <ItemGroup>
     <ProjectReference Include="..\DinnerApp.Application\DinnerApp.Application.csproj" />
   </ItemGroup>
-
-
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+  </ItemGroup>
+  
 </Project>
